tests/rosetta/transpiler/Zig/call-a-function-11.error
zig build: exit status 1
/tmp/call-a-function-11.zig:27:9: error: local variable is never mutated
/tmp/call-a-function-11.zig:27:9: note: consider using 'const'
/tmp/call-a-function-11.zig:25:11: error: unused local constant
